--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header {
 }
 
 header h2 {
-  color: white;
+  color: rgb(199, 135, 135);
   font-size: 3em;
   font-weight: normal;
 }
@@ -56,7 +56,7 @@ header .social-nav {
   width: 100%;
   height: 100%;
   border-radius: 100%;
-  background-color: blue;
+  background-color: rgb(16, 16, 151);
   border: 4px solid white;
 }
 
@@ -98,7 +98,7 @@ section.about p {
 
 .project {
   display: block;
-  width: 286px;
+  width: 100%;
   background: red;
   margin-bottom: 20px;
   height: 200px;
